fix transition jumpyness

--- a/www/css/frm.css
+++ b/www/css/frm.css
@@ -4,6 +4,10 @@ body {
   min-height:100%;
 }
 
+.page-container {
+  display: none;
+}
+
 .large-glyphicon {
   font-size: 28px;  
 }
